--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 </nav>
     </header>
     <div class=" img">
-        <p>#Paradis</p>
+       <p>#Paradis</p>
+    </div>
     </div>
      <div class="guinea">
         <div>
@@ -93,23 +94,62 @@
             </article>
         </section>
         <section class="actus">
-  <h2>À la une</h2>
-  <div class="actus-list">
-    <article>
-      <h3>Festival des Arts de Conakry</h3>
-      <p>Venez découvrir la richesse culturelle de la Guinée lors du festival annuel…</p>
-      <a href="#">Lire plus</a>
-    </article>
-    <!-- Ajoute d'autres articles -->
+            <h2>À la une</h2>
+            <div class="actus-list">
+                <article>
+                <h3>Festival des Arts de Conakry</h3>
+                <p>Venez découvrir la richesse culturelle de la Guinée lors du festival annuel…</p>
+                <a href="#">Lire plus</a>
+                </article>
+                <article>
+                <h3>Festival des Arts de Conakry</h3>
+                <p>Venez découvrir la richesse culturelle de la Guinée lors du festival annuel…</p>
+                <a href="#">Lire plus</a>
+                </article>
+                <article>
+                <h3>Festival des Arts de Conakry</h3>
+                <p>Venez découvrir la richesse culturelle de la Guinée lors du festival annuel…</p>
+                <a href="#">Lire plus</a>
+                </article>
+                <article>
+                <h3>Festival des Arts de Conakry</h3>
+                <p>Venez découvrir la richesse culturelle de la Guinée lors du festival annuel…</p>
+                <a href="#">Lire plus</a>
+                </article>
+                <article>
+                <h3>Festival des Arts de Conakry</h3>
+                <p>Venez découvrir la richesse culturelle de la Guinée lors du festival annuel…</p>
+                <a href="#">Lire plus</a>
+                </article>
+                <!-- Ajoute d'autres articles -->
+            </div>
+        </section>
+        <section class="partenaires">
+  <h2>Nos partenaires</h2>
+  <div class="partenaires-list">
+    <img src="images/Naby Moussa.jpg" alt="Partenaire 1">
+    <img src="images/Ansou.jpeg" alt="Partenaire 2">
+    <img src="images/Edhi.jpg" alt="Partenaire 3">
   </div>
 </section>
-<section class="temoignages">
-  <h2>Ils parlent de nous</h2>
-  <blockquote>
-    “Un site incontournable pour découvrir la Guinée !”<br>
-    <span>- Fatoumata D.</span>
-  </blockquote>
+<section class="carte-guinee">
+  <h2>Où nous trouver ?</h2>
+  <img src="images/guinea-removebg-preview.png" alt="Carte de la Guinée" style="max-width:100%;border-radius:12px;">
 </section>
+       <section class="temoignages">
+  <h2>Ils parlent de nous</h2>
+  <div class="temoignages-list">
+    <blockquote>“Un site incontournable pour découvrir la Guinée !”<br><span>- Fatoumata D.</span></blockquote>
+    <blockquote>“Vous n'aurez pas de regret à naviguer sur ce site !”<br><span>- Naby Moussa.</span></blockquote>
+    <blockquote>“J'ai pas eu besoin qu'on me montre du doigt les endroits grâce à ce site !”<br><span>- Traoré Oumar.</span></blockquote>
+    <blockquote>“Je vous le conseille emblément !”<br><span>- Nagnouma Cheick.</span></blockquote>
+  </div>
+</section>
+        <form class="newsletter">
+            <label for="email">Recevez nos actus :</label>
+            <input type="email" id="email" placeholder="Votre email">
+            <button type="submit">S'inscrire</button>
+        </form>
     </main>
 
     <footer class="footer">
