--- a/destination.html
+++ b/destination.html
@@ -112,7 +112,7 @@
         </main>
     <footer class="footer">
         <div>
-            <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px" ; width="115px"></a>
+            <a href="index.html"><img src="images/logoo.png" alt="logo"></a>
             <h1>nimba guinée</h1><br>
             <p>La Guinée c'est chez nous</p>
         </div>
