--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nimba-Guinée</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header class="header">
@@ -57,7 +58,9 @@
 </nav>
     </header>
     <div class=" img">
-       <p>#Paradis</p>
+       <!-- <p>#Paradis</p> <br>
+       <P>#Paradis</P><br>
+       <p>#Paradis</p><br> -->
     </div>
     </div>
      <div class="guinea">
@@ -150,11 +153,37 @@
             <input type="email" id="email" placeholder="Votre email">
             <button type="submit">S'inscrire</button>
         </form>
+        <section class="guinea-info-bar">
+    <div class="info-item">
+        <i class="fas fa-city info-icon"></i>
+        <span class="info-value">Conakry</span>
+    </div>
+    <div class="info-item">
+        <i class="fas fa-users info-icon"></i>
+        <span class="info-value">~14 millions</span>
+    </div>
+    <div class="info-item">
+        <i class="fas fa-map info-icon"></i>
+        <span class="info-value">245 857 km²</span>
+    </div>
+    <div class="info-item">
+        <i class="fas fa-coins info-icon"></i>
+        <span class="info-value">~17,5 Mds $ (2023)</span>
+    </div>
+    <div class="info-item">
+        <i class="fas fa-language info-icon"></i>
+        <span class="info-value">Français</span>
+    </div>
+    <div class="info-item">
+        <i class="fas fa-money-bill-wave info-icon"></i>
+        <span class="info-value">Franc guinéen (GNF)</span>
+    </div>
+</section>
     </main>
 
     <footer class="footer">
         <div>
-            <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px; width: 115px;"></a>
+            <a href="index.html"><img src="images/logoo.png" alt="logo"></a>
             <h1>nimba guinée</h1>
             <p>La Guinée c'est chez nous</p>
         </div>
