--- a/index.html
+++ b/index.html
@@ -100,23 +100,18 @@
             <h2>À la une</h2>
             <div class="actus-list">
                 <article>
-                <h3>Festival des Arts de Conakry</h3>
-                <p>Venez découvrir la richesse culturelle de la Guinée lors du festival annuel…</p>
+                <h3>Le retour de Mansa Moussa au Pays</h3>
+                <p>Après une longue période a la Recherche du savoir, le jeune fait finalement son retour en ville</p>
                 <a href="#">Lire plus</a>
                 </article>
                 <article>
-                <h3>Festival des Arts de Conakry</h3>
-                <p>Venez découvrir la richesse culturelle de la Guinée lors du festival annuel…</p>
+                <h3>Avènement de la grande fête</h3>
+                <p>C'est l'heure, nos routes sont encombrées, plus de voyageurs que prévus. Quand c'est la fête il faut y aller</p>
                 <a href="#">Lire plus</a>
                 </article>
                 <article>
-                <h3>Festival des Arts de Conakry</h3>
-                <p>Venez découvrir la richesse culturelle de la Guinée lors du festival annuel…</p>
-                <a href="#">Lire plus</a>
-                </article>
-                <article>
-                <h3>Festival des Arts de Conakry</h3>
-                <p>Venez découvrir la richesse culturelle de la Guinée lors du festival annuel…</p>
+                <h3>Edhi le héros du jour</h3>
+                <p>Le jeune Edhi sauveur de toute une nation, le peuple te dit merci Edhi</p>
                 <a href="#">Lire plus</a>
                 </article>
                 <article>
